UPDATE: Refactor CatalogController to return MangaService-compatible response format and improve logging in MelonIntegrationService