@@ -6,9 +6,14 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import shadowshift.studio.parserservice.dto.CatalogResult;
+import shadowshift.studio.parserservice.dto.CatalogItem;
 import shadowshift.studio.parserservice.service.MangaLibParserService;
 
 import java.util.concurrent.CompletableFuture;
+import java.util.Map;
+import java.util.HashMap;
+import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Legacy catalog endpoint for MangaService compatibility
@@ -27,7 +32,7 @@ public class CatalogController {
      * GET /catalog/{page}?parser=mangalib&limit=60
      */
     @GetMapping("/{page}")
-    public ResponseEntity<CatalogResult> getCatalog(
+    public ResponseEntity<Map<String, Object>> getCatalog(
             @PathVariable int page,
             @RequestParam(required = false, defaultValue = "mangalib") String parser,
             @RequestParam(required = false, defaultValue = "60") int limit) {
@@ -42,30 +47,46 @@ public class CatalogController {
             // Check if result is valid
             if (result == null) {
                 logger.warn("Catalog fetch returned null for page {}", page);
-                result = createEmptyCatalog(page);
+                return ResponseEntity.ok(createErrorResponse("Catalog fetch returned null"));
             } else if (result.getItems() == null) {
                 logger.warn("Catalog items are null for page {}", page);
-                result.setItems(java.util.Collections.emptyList());
-            } else if (result.getItems().size() > limit) {
-                // Limit results if needed
-                result.setItems(result.getItems().subList(0, limit));
+                return ResponseEntity.ok(createSuccessResponse(page, List.of()));
             }
             
-            logger.info("Catalog page {} returned {} items", page, 
-                result.getItems() != null ? result.getItems().size() : 0);
-            return ResponseEntity.ok(result);
+            // Extract slugs from items
+            List<String> slugs = result.getItems().stream()
+                    .limit(limit)
+                    .map(CatalogItem::getSlug)
+                    .collect(Collectors.toList());
+            
+            logger.info("Catalog page {} returned {} items", page, slugs.size());
+            return ResponseEntity.ok(createSuccessResponse(page, slugs));
             
         } catch (Exception e) {
             logger.error("Error fetching catalog page {}: {}", page, e.getMessage(), e);
-            return ResponseEntity.ok(createEmptyCatalog(page));
+            return ResponseEntity.ok(createErrorResponse(e.getMessage()));
         }
     }
     
-    private CatalogResult createEmptyCatalog(int page) {
-        CatalogResult emptyResult = new CatalogResult();
-        emptyResult.setPage(page);
-        emptyResult.setTotal(0);
-        emptyResult.setItems(java.util.Collections.emptyList());
-        return emptyResult;
+    /**
+     * Create success response in MangaService-compatible format
+     */
+    private Map<String, Object> createSuccessResponse(int page, List<String> slugs) {
+        Map<String, Object> response = new HashMap<>();
+        response.put("success", true);
+        response.put("page", page);
+        response.put("count", slugs.size());
+        response.put("slugs", slugs);
+        return response;
+    }
+    
+    /**
+     * Create error response in MangaService-compatible format
+     */
+    private Map<String, Object> createErrorResponse(String errorMessage) {
+        Map<String, Object> response = new HashMap<>();
+        response.put("success", false);
+        response.put("error", errorMessage != null ? errorMessage : "Unknown error");
+        return response;
     }
 }
